apps/containerised-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerised-service
  labels:
    app.kubernetes.io/name: containerised-service
    app.kubernetes.io/part-of: containerised-service-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: containerised-service
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
